0.9.5
- Fix: Physcannon not dropping attached object when weapon dropped.

0.9.4
- Feature: Add 'LambdaInitializeMapList(maplist)' hook, allows addons to add/remove maps from the list.
- Fix: Vote system did not consider amount of voters, 2/3 is required to be a valid vote.
- Fix: Gravity gun throwing errors in some cases.

0.9.3
- Feature: Realism difficulty, for people who like a challenge.
- Feature: Medkit was added to heal and revive players, received in d1_trainstation_05.
- Feature: lambda_weapondropmode allows to specify what players drop on death.
- Feature: Implemented env_zoom with multiplayer support.
- Feature: Implemented point_viewcontrol with multiplayer support.
- Feature: Player flinching animations that indicates the hit position of damage.
- Improved: Allow gametype to auto start without players.
- Improved: (F1) Player menu overhaul.
- Improved: Checkpoints were rebalanced, encourage players to revive others.
- Improved: Physcannon prediction has now a tolerance before being attached clientside.
- Improved: Physcannon glow was reduced.
- Improved: Kill feed overhaul, now considers screen resolution.
- Improved: Replaced bullet impact sounds with more realistic ones.
- Improved: Proxy animation models for episodic support, currently incomplete.
- Fix: PLAYER:Give not working properly in some cases.
- Fix: Physcannon not networking idle time causing stuttery momvement.
- Fix: d1_town_02 lock door to prevent backtracking.
- Fix: Physcannon missing sprites glow sprites on end caps.
- Fix: Vehicle view not resetting roll.
- Fix: Item respawn spam.
- Fix: d2_prison_05 blocking players near map end.
- Fix: NPC Maker not spawning NPCs in some cases.
- Fix: d1_trainstation_01 queue sometimes blocking the player.
- Fix: Don't render player blockades in Skybox rendering pass.
- Fix: Gravity Gun not resetting beam properly on FP/TP view change.
- Fix: Some delayed inputs firing after map reset.
- Fix: trigger displaying waiting info when requested not to.